[project]
name = "github-profile-stats"
version = "2.0.0"
description = "Generate GitHub profile statistics as SVG badges"
requires-python = ">=3.12"
dependencies = ["aiohttp", "jinja2"]

[project.scripts]
generate-stats = "github_stats.__main__:cli"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "LOG"]

[tool.ruff.format]
quote-style = "double"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/github_stats"]
